[package]
name = "rust-container-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_json = { version = "1.0" }
base64 = { version = "0.21"}
futures = { version = "0.3"}
flate2 = "1.0.25"
tar = "0.4.38"
